@@ -1,6 +1,6 @@
 == Version 1.1.0: Not Released ==
 
-Issues Fixed: 121, 138
+Issues Fixed: 121, 138, 147
 
 * Added non-empty matchers to complement the emptiness-matching forms.
 
@@ -18,6 +18,8 @@ Issues Fixed: 121, 138
 
 * Matchers that accept an array of matchers now also accept variable arguments.
   Any non-matcher arguments are wrapped by IsEqual.
+
+* Added noneOf() as a shortcut for not(anyOf()).
 
 
 == Version 1.0.0: Released Jan 20 2012 ==
